# netcup-foip-operator

./: .gitignore  Dockerfile  README.md  crds.yml  pyproject.toml
.github/workflows/: containerimage.yml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/crds/: crds.yml  kopf.yaml
deploy/chart/templates/: _helpers.tpl  daemonset.yaml  failoverIps.yaml  peering.yaml  rbac.yaml  serviceaccount.yaml
src/netcup_foip_controller/: __init__.py
src/netcup_foip_controller/models/: v1.py
src/netcup_foip_operator/: __init__.py  foip.py  node_interface.py
